name:                write-yourself-a-scheme
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/DylanSp/write-yourself-a-scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Dylan
maintainer:          dylan.richard.sprague@gmail.com
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable write-yourself-a-scheme
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , parsec 
